--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 ---
 layout: home
 author_profile: true
+classes: wide
 title: About
 ---
 
-I am a PhD Candidate in the Human Centered Robotics Lab at the University of Texas at Austin, advised by Professor [Luis Sentis](https://www.ae.utexas.edu/people/faculty/faculty-directory/sentis).
+I am a PhD Candidate in the Human Centered Robotics Lab at the University of Texas at Austin, advised by Professor <a href="https://www.ae.utexas.edu/people/faculty/faculty-directory/sentis">Luis Sentis.</a>
 My research interest lies broadly in the whole-body motion planning and control algorithms for deployable and versatile humanoid robots. 
 I strongly believe that robust and efficient reactive and predictive whole-body control would enable human-level autonomy and agility for humanoid robots.
