--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@ classes: wide
 title: About
 ---
 
-I am a PhD Candidate in the Human Centered Robotics Lab at the University of Texas at Austin, advised by Professor <a href="https://www.ae.utexas.edu/people/faculty/faculty-directory/sentis">Luis Sentis.</a>
+<p>I am a PhD Candidate in the Human Centered Robotics Lab at the University of Texas at Austin, advised by Professor <a href="https://www.ae.utexas.edu/people/faculty/faculty-directory/sentis">Luis Sentis.</a>
 My research interest lies broadly in the whole-body motion planning and control algorithms for deployable and versatile humanoid robots. 
-I strongly believe that robust and efficient reactive and predictive whole-body control would enable human-level autonomy and agility for humanoid robots.
+I strongly believe that robust and efficient reactive and predictive whole-body control would enable human-level autonomy and agility for humanoid robots.</p>
 
-Recently, I served as a robotics software engineering intern in the motion planning and control team at Apptronik. My primary focus was on developing a locomotion controller using model predictive control that is aware of centroidal inertia changes. Witnessing and contributing to the final development and launch of the Apollo humanoid during my internship was undoubtedly a highlight.
+<p>Recently, I served as a robotics software engineering intern in the motion planning and control team at Apptronik. My primary focus was on developing a locomotion controller using model predictive control that is aware of centroidal inertia changes. Witnessing and contributing to the final development and launch of the Apollo humanoid during my internship was undoubtedly a highlight.</p>
 
-I earned my Master's in Aerospace Engineering from the Human Centered Robotics Lab at the University of Texas at Austin. During my studies, I concentrated on developing a controller for a 7-DOF compliant isoelastic manipulator and exploring its interactions with a cognitive architecture.
+<p>I earned my Master's in Aerospace Engineering from the Human Centered Robotics Lab at the University of Texas at Austin. During my studies, I concentrated on developing a controller for a 7-DOF compliant isoelastic manipulator and exploring its interactions with a cognitive architecture.</p>
