--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ classes: wide
 title: About
 ---
 
-<p>I am Software Engineer in Robotics at Apptronik. I received my PhD in Aerospace Engineering from the University of Texas at Austin as part of the Human Centered Robotics Lab, advised by Professor <a href="https://www.ae.utexas.edu/people/faculty/faculty-directory/sentis">Luis Sentis.</a>
+<p>I am a Software Engineer in Robotics at Apptronik. I received my PhD in Aerospace Engineering from the University of Texas at Austin as part of the Human Centered Robotics Lab, advised by Professor <a href="https://www.ae.utexas.edu/people/faculty/faculty-directory/sentis">Luis Sentis.</a>
 My research interest lies broadly in the whole-body motion planning and control algorithms for deployable and versatile humanoid robots. 
 I strongly believe that robust and efficient reactive and predictive whole-body control would enable human-level autonomy and agility for humanoid robots.</p>
 
